# theoremquest

./: Makefile  README  notes  theoremquest.cabal
src/: Library.hs  LoK.hs  LoKTest.hs  Logic.hs  TheoremQuest.hs  TheoremQuestClient.hs  TheoremQuestServer.hs  Transactions.hs
src/TheoremQuest/: Logic.hs  Transactions.hs
theoremquest/: TheoremQuest.hs  theoremquest.cabal
theoremquest-client/: TheoremQuestClient.hs  theoremquest-client.cabal
theoremquest-server/: Library.hs  TheoremQuestServer.hs  TheoremQuestServerCGI.hs  theoremquest-server.cabal
theoremquest/TheoremQuest/: Logic.hs  Transactions.hs
