name:    theoremquest
version: 0.0.0

category: Game, Formal Methods, Theorem Provers

synopsis: A theorem proving game.

description:
  TODO

author:     Tom Hawkins <tomahawkins@gmail.com>
maintainer: Tom Hawkins <tomahawkins@gmail.com>

build-type:    Simple
cabal-version: >= 1.6

license:      BSD3
license-file: LICENSE

executable theoremquest-server
  hs-source-dirs:    src
  main-is:           TheoremQuestServer.hs
  build-depends:     base         >= 4.0   && < 5,
                     network      >= 2.3   && < 2.4,
                     url          >= 2.1   && < 2.2,
                     http-server  >= 1     && < 2
  ghc-options:       -W

executable theoremquest
  hs-source-dirs:    src
  main-is:           TheoremQuestClient.hs
  build-depends:     base         >= 4.0    && < 5,
                     HTTP         >= 4000.1 && < 4000.2
  ghc-options:       -W

library
  hs-source-dirs:    src
  build-depends:     base         >= 4.0    && < 5,
                     HTTP         >= 4000.1 && < 4000.2,
                     utf8-string  >= 0.3   && < 0.4,
                     json         >= 0.4.4  && < 0.5
  exposed-modules:
    TheoremQuest
    TheoremQuest.Logic
    TheoremQuest.Transactions
  ghc-options: -W

source-repository head
  type:     git
  location: git://github.com/tomahawkins/theoremquest.git

